[Win] Popup menus have incorrect placement when device scale factor != 1. https://bugs.webkit.org/show_bug.cgi?id=147880

Reviewed by Brent Fulgham.

We need to take the device scaling factor into account when calculating
the position and size of the popup menu.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::calculatePositionAndSize):


Canonical link: https://commits.webkit.org/165982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188259 268f45cc-cd09-0410-ab3c-d52691b4dbfc